2009-04-30 Frank Naegler <typo3@naegler.net>

	* Bugfix: pageBrowser on listGroup

2009-04-16 Frank Naegler <typo3@naegler.net>

	* Bugfix: pageBrowser has wrong page count

2009-04-14 Frank Naegler <typo3@naegler.net>

	* adding pagebrowser for the myGroups Widget

2009-04-08 Frank Naegler <typo3@naegler.net>

	* change process of removing admin on group model

2009-03-18 Frank Naegler <typo3@naegler.net>

	* added interface tx_community_GroupProvider
	* added hook calls to tx_community_model_Group: afterAddMember, afterRemoveMember
	* added hook call to tx_community_controller_CreateGroupApplication: afterCreateGroup
	
2009-03-16 Frank Naegler <typo3@naegler.net>

	* added cObj viewhelper to tx_community_view_userprofile_MyGroups
	* added widget viewhelper to tx_community_view_userprofile_MyGroups
	* added get and set methods for groups to tx_community_controller_AbstractCommunityApplication
	* added group support to image widget
	* added group widget: member birthdaylist
	
2008-12-16 Ingo Renner  <ingo@typo3.org>

	* added square thumbnails
	* added a check for empty searches

2009-02-26 Frank Naegler <typo3@naegler.net>

	* added support for userProfile and startpage on myFriendsWidget

2009-02-20 Frank Naegler <typo3@naegler.net>

	* added config for mail headers in invteApplication

2009-02-19 Frank Naegler <typo3@naegler.net>

	* added new marker ###MESSAGE_CLASS### to tx_community_view_invite_Message

2009-02-18 Frank Naegler <typo3@naegler.net>

	* added hook and interface to inviteApplication for additional markers in the invite email

2009-02-12 Frank Naegler <typo3@naegler.net>

	* added messages to the profileActions for new relations
	* change removeRelationship method.

2009-02-05 Frank Naegler <typo3@naegler.net>

	* search apllication controoler: added check in getWhereClause() => if we get an empty value, just return an empty string. else, this function returns a bad SQL where clause.

2009-02-05 Michael Knabe <mk@e-netconsulting.de>
